Fix tooltip text wrapping

--- a/web/style_tools.css
+++ b/web/style_tools.css
@@ -558,6 +558,7 @@ p, li, td, .menu_active, input, button {
     left: 50%;
     margin-left: -60px;
     opacity: 0;
+    white-space: normal;
 }
 
 .tooltip .tooltiptext::after {
